--- a/image_Gallery.html
+++ b/image_Gallery.html
@@ -115,53 +115,53 @@ body {font-family: "Lato", sans-serif}
 
 <div class="w3-row gallery" >
   <div class="w3-col s4 m6 l4  w3-center">
-        <div class = "gallery-item"> <img class="gallery-image " src="./image-5.jpg" alt="Bradley jumping in Egypt with the Pyramids in the background"><!--gallery-image--></div>
+        <div class = "gallery-item"> <img class="gallery-image " src="./images/image-5.jpg" alt="Bradley jumping in Egypt with the Pyramids in the background"><!--gallery-image--></div>
   </div>
   <div class="w3-col s4 m6 l4  w3-center ">
 
-        <div class = "gallery-item"><img class="gallery-image  " src="./image-6.jpg" alt="Bradley at the Leaning Tower of Pisa standing in such a way that it looks like he is holding the Pisa leaning tower and supporting it from falling."></div>
+        <div class = "gallery-item"><img class="gallery-image  " src="./images/image-6.jpg" alt="Bradley at the Leaning Tower of Pisa standing in such a way that it looks like he is holding the Pisa leaning tower and supporting it from falling."></div>
 
   </div>
   <div class="w3-col s4 m6 l4 w3-center">
 
 
-        <div class = "gallery-item"><img class="gallery-image " src="./image-7.jpg" alt="Bradley at Positano Italy, posing before a beautiful view of Italian houses, mountains and beach"></div>
+        <div class = "gallery-item"><img class="gallery-image " src="./images/image-7.jpg" alt="Bradley at Positano Italy, posing before a beautiful view of Italian houses, mountains and beach"></div>
 
   </div>
     <div class="w3-col s4 m6 l4 w3-center ">
 
-    <div class = "gallery-item"><img class="gallery-image " src="./image-8.jpg" alt="Bradley singing in a white suit with a Filipino girl in red dress dancing in the background "></div>
+    <div class = "gallery-item"><img class="gallery-image " src="./images/image-8.jpg" alt="Bradley singing in a white suit with a Filipino girl in red dress dancing in the background "></div>
 
 
   </div>
   <div class="w3-col s4 l4 m6  w3-center ">
  
 
-        <div class = "gallery-item"><img class="gallery-image " src="./image-9.jpg" alt="Bradley looking cool in sunglasses and in white clothing on a LA sidewalk."></div>
+        <div class = "gallery-item"><img class="gallery-image " src="./images/image-9.jpg" alt="Bradley looking cool in sunglasses and in white clothing on a LA sidewalk."></div>
    
   </div>
   
   <div class="w3-col s4 l4 m6  w3-center ">
 
-    <div class = "gallery-item"><img class="gallery-image " src="./image-10.jpg" alt="Bradley at Disneyland smiling before the castle at the Orlando Resort Florida"></div>
+    <div class = "gallery-item"><img class="gallery-image " src="./images/image-10.jpg" alt="Bradley at Disneyland smiling before the castle at the Orlando Resort Florida"></div>
 
  
   </div>
     <div class="w3-col s4 m6 l4 w3-center ">
 
-    <div class = "gallery-item"> <img class="gallery-image " src="./image-11.jpg" alt="Bradley before a Giza Pyramid in the background, hands outstretched and smiling with sunglasses"></div>
+    <div class = "gallery-item"> <img class="gallery-image " src="./images/image-11.jpg" alt="Bradley before a Giza Pyramid in the background, hands outstretched and smiling with sunglasses"></div>
 
 
   </div>
   <div class="w3-col s4 m6 l4  w3-center ">
 
 
-      <div class = "gallery-item"> <img class="gallery-image " src="./image-12.jpg" alt="Bradley standing atop the Eiffel Tower in Paris with sunglasses and striped white shirt."> </div> 
+      <div class = "gallery-item"> <img class="gallery-image " src="./images/image-12.jpg" alt="Bradley standing atop the Eiffel Tower in Paris with sunglasses and striped white shirt."> </div> 
  
   </div>
   <div class="w3-col s4 m6 l4 w3-center">
 
-    <div class = "gallery-item"><img class="gallery-image " src="./image-13.jpg" alt="Bradley standing before the Eiffel Tower from the ground with the tower in the bacgkround before a beautiful blue sky."></div>
+    <div class = "gallery-item"><img class="gallery-image " src="./images/image-13.jpg" alt="Bradley standing before the Eiffel Tower from the ground with the tower in the bacgkround before a beautiful blue sky."></div>
 
 
   </div>
