Update index.html Homepage title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <head>
+    <title>Bradley Marshall Home Page</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./main.css">
    
